--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ stages:
 pylint:
   stage: Static Analysis
   script:
-    - pylint -d C0301 calculator.py
+    - pylint -d C0301 main.py
 
 pytest:
   stage: Test
